FrostWire 2.0.7 build 551 - JUL/31/2018
 - Crash on Audio Player equalizer menu
 - Translations updated: Croatian, Thai, Indonesian, new strings on all
 - Library updates: applovin 8.1.0, (dev) gradle 4.9
 - Fixes bug on banner dismissal button behavior
 - New GDPR consent dialog for European users

FrostWire 2.0.6 build 546 - JUL/10/2018
 - Yify search fixed
 - EZTV search fixed
 - TorrentDownloads search fixed, now magnet based
 - LimeTorrents search fixed
 - New jlibtorrent 1.2.0.18-RC9
 - Translations updated: Malay, Slovak, Vietnamese, Chinese
 - Library updates: prebid 0.4, (dev) buildtools 28.0.1, (dev) gradle 4.8.1
   mopub 5.2.0, applovin 8.0.2

FrostWire 2.0.5 build 541 - JUN/17/2018
 - No more intrusive interstitial ads when resuming app
 - New jlibtorrent 1.2.0.18-RC6
 - Android billing client 1.1 update
 - Music Player: Shuffle mode now remembers songs played, back works as expected
 - Music Player: Shuffle and Repeat mode preferences are remembered across sessions
 - Music Player: Shuffle mode respects Repeat mode
 - Music Player: Add song to playlist shows mini-player in My Music
 - Music Player: Repeat All is the default playback mode for playlists
 - Music Player: Empty playlist message makes sense now
 - New: Telugu translation available for 75 million speakers
 - New: Marathi translation available for 73 million speakers
 - Translations updated: Romanian, Turkish, Finnish, Serbian, Norwegian, Ukranian
 - Library updates: (GDPR) applovin 8.0.1, prebid 0.3, mopub 5.1.0, flexbox 1.0.0, presage 3.0.17/3.0.11
 - Library updates: (dev) gradle 4.8
 - Fixes bug on which music playback was stopped when a video interstitial ad was shown
 - Memory leak fixed on SearchHeaderBanner

FrostWire 2.0.4 build 526 - MAY/01/2018
 - New jlibtorrent 1.2.0.18-RC4
 - jlibtorrent: updated to boost 1.67.0
 - jlibtorrent: updated to OpenSSL 1.1.0h
 - jlibtorrent: fix storage initialization