@@ -1,9 +1,10 @@
-FrostWire 2.0.7 build 551 - JUL/31/2018
+FrostWire 2.0.7 build 551 - AUG/01/2018
  - Crash on Audio Player equalizer menu
- - Translations updated: Croatian, Thai, Indonesian, new strings on all
+ - Translations updated: Croatian, Thai, Indonesian, Polish new strings on all
  - Library updates: applovin 8.1.0, (dev) gradle 4.9
  - Fixes bug on banner dismissal button behavior
  - New GDPR consent dialog for European users
+ - Freeze fixes
 
 FrostWire 2.0.6 build 546 - JUL/10/2018
  - Yify search fixed
